# simple-auth-server

./: .env.dist  Cargo.toml  README.MD
migrations/2019-10-07-205027_users/: up.sql
migrations/2019-10-07-205328_invitation/: up.sql
src/: email_service.rs  errors.rs  main.rs  models.rs  utils.rs
src/handlers/: auth_handler.rs  invitation.rs  mod.rs  register.rs
tests_shell/: invite.sh  register.sh  test_auth.sh
