[package]
name = "simple-auth-server"
version = "0.1.0"
authors = ["Aleksandr Kravtsov <sabahtalateh@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.4.6", features = ["postgres", "uuidv07", "r2d2", "chrono"] }
dotenv = "0.14.1"
env_logger = "0.7.0"
actix-web = "1.0.8"
actix-identity = "0.1.0"
chrono = "0.4.9"
lazy_static = "1.4.0"
uuid = { version = "0.7.4", features = ["serde", "v4"] }
derive_more = "0.15.0"
serde = { version = "1.0.101", features = ["derive"] }
serde_json = "1.0.41"
futures = "0.1.29"
sparkpost = "0.5.3"
argonautica = "0.2.0"
